# stargazing-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release-pypi.yml
src/stargazing_core/: __init__.py  _catalog.py  _celestial_models.py  _constellation.py  _coord.py  _ephemeris.py  _filtering.py  _geo.py  _moon.py  _mosaic.py  _pagination.py  _planets.py  _shooting_plan.py  _telescope.py  _timegrid.py  _weather.py
src/stargazing_core/data/: objects.json
tests/: conftest.py  test_catalog.py  test_celestial_models.py  test_constellation.py  test_coord.py  test_filtering.py  test_geo.py  test_moon.py  test_mosaic.py  test_pagination.py  test_planets.py  test_shooting_plan.py  test_telescope.py  test_timegrid.py  test_weather.py
